--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -3,14 +3,14 @@
   <div class="container">
     {{- partial "breadcrumb" . -}}
     <div class="taxonomys">
-      {{- range (.Paginate .Data.Terms.ByCount).Pages -}}
-      {{- $count := len .Pages -}}
+      {{- range .Data.Terms.ByCount -}}
+      {{- $count := .Count -}}
       <div class="taxonomy row surface">
         <h2 class="taxonomy-title">
           <a href="{{ .Page.Permalink }}">{{ .Page.Title }}</a>
         </h2>
         <div class="taxonomy-meta">
-          <span class="taxonomy-post-count"><i class="fas fa-fw fa-file-alt"></i>{{ i18n "post_count" (dict "Count" $count) }}</span>
+          <span class="taxonomy-post-count"><i class="fas fa-fw fa-file-alt"></i>{{ i18n "post_count" . }}</span>
         </div>
         {{- $postCount := default 3 $.Site.Params.taxonomyPostCount -}}
         {{- if $postCount -}}
@@ -31,7 +31,6 @@
       </div>
       {{- end -}}
     </div>
-    {{- partial "pagination" . -}}
   </div>
 </div>
 {{- partial "sidebar" . -}}
