--- a/layouts/partials/header/navbar.html
+++ b/layouts/partials/header/navbar.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-xl{{ if (default true $.Site.Params.fixedHeader) }} fixed-top{{ end }}">
   <div class="container{{ if default false .Site.Params.fullWidth }}-fluid{{ end }}">
     <a class="navbar-brand{{ if .IsHome }} active{{ end }}" href="{{ absLangURL "" }}">
-      {{ partial "helpers/image" (dict "filename" (default "images/logo.webp" .Site.Params.logo) "alt" "Logo" "class" "logo" "resources" .Resources) }}
+      <img class="logo" alt="Logo" src="{{ absURL (default "images/logo.webp" .Site.Params.logo) }}" loading="lazy">
       {{- with .Site.Params.brand -}}
       {{ . }}
       {{- end -}}
@@ -31,7 +31,7 @@
             {{- $childURL := absLangURL .URL -}}
             <li>
               <a class="dropdown-item{{ if or (eq $currentPage.Permalink (absLangURL .URL)) ($currentPage.IsMenuCurrent "main" .) }} active{{ end }}"
-                href="{{ $childURL }}"{{ if not (hasPrefix $childURL $baseURL) }} target="_blank" rel="noopener noreferrer"{{ end }}>
+                href="{{ $childURL }}"{{ if not (hasPrefix $childURL $baseURL) }} target="_blank"{{ end }}>
                 {{ .Pre }} {{- .Name -}} {{ .Post }}
               </a>
             </li>
@@ -40,7 +40,7 @@
         </li>
         {{- else -}}
         <li class="nav-item">
-          <a class="nav-link{{ if $active }} active{{ end }}" href="{{ $url }}"{{ if not (hasPrefix $url $baseURL) }} target="_blank" rel="noopener noreferrer"{{ end }}>
+          <a class="nav-link{{ if $active }} active{{ end }}" href="{{ $url }}"{{ if not (hasPrefix $url $baseURL) }} target="_blank"{{ end }}>
             {{ .Pre }} {{- .Name -}} {{ .Post }}
           </a>
         </li>
