--- a/layouts/partials/list.html
+++ b/layouts/partials/list.html
@@ -11,13 +11,17 @@
   <div class="posts mb-4">
   {{- range $pages -}}
     <article class="post row surface">
-      <h2 class="post-title mb-4"><a href="{{ .Permalink }}">{{ partial "helpers/title" . }}</a></h2>
-      {{- partial "post/meta" . -}}
-      <div class="post-summary mb-3">
-        {{ if  .Params.Images }}
-        {{ partial "helpers/image" (dict "filename" (index .Params.Images 0) "alt" .Title "class" "img-fluid" "resources" .Resources) }}
-        {{ end }}
-        {{ partial "post/excerpt" . }}
+      {{- if .Params.Images -}}
+      <div class="post-thumbnail col-md-3 d-flex align-items-center justify-content-center">
+        <img class="img-fluid" src="{{ index .Params.Images 0 | absURL }}" loading="lazy"/>
+      </div>
+      {{- end -}}
+      <div class="post-body{{ if .Params.Images }} col-md-9{{ end }}">
+        <h2 class="post-title mb-4"><a href="{{ .Permalink }}">{{ partial "helpers/title" . }}</a></h2>
+        {{- partial "post/meta" . -}}
+        <div class="post-summary mb-3">
+          {{ partial "post/excerpt" . }}
+        </div>
       </div>
     </article>
   {{- end -}}
